# rp2040-experiments

./: Cargo.toml  README.md
.cargo/: config.toml
bus_behavior/: Cargo.toml  README.md  build.rs  memory.x
bus_behavior/.cargo/: config.toml
bus_behavior/examples/: exp1.rs  exp1_1.rs  exp2.rs  exp3.rs  exp4.rs  exp5.rs  exp6.rs  exp7.rs  exp7_1.rs  exp99.rs  interrupt_latency.rs  pre_exp1.rs  template.rs  template2.rs
bus_behavior/src/: lib.rs
cross_core_demos/: Cargo.toml  README.md
cross_core_demos/.cargo/: config.toml
cross_core_demos/examples/: demo1.rs  demo3.rs  demo4.rs
cross_core_demos/src/: lib.rs
hello_pico/: .gitignore  Cargo.toml  openocd_run.txt
hello_pico/.cargo/: config.toml
hello_pico/src/: main.rs
hello_pico_multicore/: Cargo.toml
hello_pico_ram/: Cargo.toml  README.md  build.rs  link.ram.x  link.x.in.orig
hello_pico_ram/.cargo/: config.toml
hello_pico_ram/src/: main.rs
pico_rtic_timer/: Cargo.toml
pico_rtic_timer/src/: main.rs
pico_rtic_timer_ram/: Cargo.toml  README.md
pico_rtic_timer_ram/src/: main.rs
pico_simple_timer/: Cargo.toml
pico_simple_timer/src/: main.rs
rtic_demos/: .gitignore  Cargo.toml
rtic_demos/examples/: demo2.rs  demo3.rs  demo4.rs
