[package]
name = "pico_rtic_timer_ram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pico_rtic_timer_ram"
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rp-pico = {version = "0.8.0", default-features = false, features = ["cortex-m-rt", "rt", "rp2040-boot2", "rom-func-cache", "critical-section-impl" ]}
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.9.1"


cortex-m-rtic = "1.1.4"
